--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 group 'com.jgrouse'
 version '0.1.0-SNAPSHOT'
 
-apply plugin: 'java'
+apply plugin: 'java-library'
 
 sourceCompatibility = 1.8
 
@@ -9,12 +9,18 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
+test {
+    useJUnitPlatform()
+}
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.9.1'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.13.0'
+dependencies {
+    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.0'
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.0'
+
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.15.0'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.3.0'
 
 }
