--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,9 +29,9 @@ jobs:
       shell: bash
       run:  |
         pwd
-        tar cvfz test-results.tar.gz reports/*.*
+        tar cvfz build/test-results.tar.gz build/reports
     - uses: actions/upload-artifact@v1
       if: failure()
       with:
         name: test-results.tar.gz
-        path: test-results.tar
+        path: build/test-results.tar.gz
