upload failed test results

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,15 +23,19 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build --console=plain -i
+      run: ./gradlew build
     - name: Archive test results if Gradle build failed
       if: failure()
       shell: bash
       run:  |
-        pwd
         tar cvfz build/test-results.tar.gz build/reports
     - uses: actions/upload-artifact@v1
       if: failure()
       with:
         name: test-results.tar.gz
         path: build/test-results.tar.gz
+    - uses: actions/upload-artifact@v1
+      if: failure()
+      with:
+        name: test-results.zip
+        path: build/reports
