--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,6 +26,9 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew ciBuild
+      env:
+        bintrayUser: {{ secrets.bintrayUser }}
+        bintrayKey: {{ bintrayKey }}
     - uses: actions/upload-artifact@v1
       if: failure()
       with:
