--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,7 +28,7 @@ jobs:
       run: ./gradlew ciBuild
       env:
         bintrayUser: {{ secrets.bintrayUser }}
-        bintrayKey: {{ bintrayKey }}
+        bintrayKey: {{ secrets.bintrayKey }}
     - uses: actions/upload-artifact@v1
       if: failure()
       with:
