--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,8 +26,8 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       env:
-        bintrayUser: {{ secrets.bintrayUser }}
-        bintrayKey: {{ secrets.bintrayKey }}
+        bintrayUser: ${{ secrets.bintrayUser }}
+        bintrayKey: ${{ secrets.bintrayKey }}
       run: ./gradlew ciBuild
     - uses: actions/upload-artifact@v1
       if: failure()
