--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,9 +33,9 @@ jobs:
       if: failure()
       with:
         name: test-results.zip
-        path: build/reports
+        path: /*/build/reports
     - uses: codecov/codecov-action@v1
       if: success()
       with:
         token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-        file: ./build/reports/jacoco/test/jacocoTestReport.xml
+        file: ./*/build/reports/jacoco/test/jacocoTestReport.xml
