--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,5 +38,5 @@ jobs:
       if: success()
       with:
         token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-        file: "'./build/reports/jacoco/test/*.jacocoTestReport.xml'"
+        file: './build/reports/jacoco/jacoco-jGrouse.xml'
 
