--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,7 +34,7 @@ jobs:
       if: failure()
       with:
         name: test-results.zip
-        path: /build/reports
+        path: ./build/reports
     - uses: codecov/codecov-action@v1
       if: success()
       with:
